# aut2

./: main.py  parser.ipynb  pyproject.toml  requirements.txt
data/db/: deepseek_json_20260329_5606de.json  deepseek_json_20260329_a247c8.json  deepseek_json_20260329_a4d916.json  deepseek_json_20260329_ff6054.json
data/processed/: decreto.json
src/: deepseek_python_20260330_4ab20d.py  deepseek_python_20260330_aed4ea.py  main copy.py  main.py  main_deepseek.py  parser.py
